--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h1>Pacman game</h1>
-    <h3>SCORE:<span id="score"></span></h3>
+    <h3>SCORE: <span id="score"></span></h3>
     <div class="grid"></div>
-    <script src="ania_index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
